
Ready Check
* New: Added Stellar Prismatic Wellspring (All, 60, High)
* New: Added Flaring Sigil (Mage, Cleric, 60, Medium)
* New: Added Planar Edge (Warrior, 60, Medium)
* New: Added Honed Edge (Rogue, 60, Medium)
* New: Added Lightning Sigil (Rogue, 60, Medium)

LibSBuff
* Change: Now converted over to new Rift 2.2 API Event system.

Triggers
* New: Method added Trigger:AddAlertSeq(AlertObj, Player = true/false) - Adds an Alert Object to the Alert sequence list for a created Trigger.
* New: Method added Trigger:AddTimerSeq(TimerObj) - Adds a Timer Object to the Timer sequence list for a created Trigger.
* New: Method added Trigger:ResetAlertSeq() - Resets the counter for the Alert sequence position.
* New: Method added Trigger:ResetTimerSeq() - Resets the counter for the Timer sequence position
* New: Method added Trigger:ResetSeq() - Resets both Timer and Alert positions.
* New: Added Trigger type "castID". Operates like "cast", but is expecting an ability id rather than an ability name (Locale independent)
* New: Added Trigger type "channelID". Operates like "channel", but is expecting an ability id rather an ability name (Locale independent)
* New: Added Trigger type "interruptID". Operates like "interrupt", but is expecting an ability id rather than an ability name (Locale independent)
* New: Added Trigger type "personalInterruptID". Operates like "personalInterrupt", but is expecting an ability id rather than an ability name (Locale independent)
* New: Added Trigger type "personalChannel". (Was missing from the Personal style trigger list)
* New: Added Trigger type "personalChannelID". Operates like "personalChannel", but is expecting an ability id rather than an ability name (Locale independent)
* New: Added Trigger type "personalCastID". Operates like "personalCast", but is expecting an ability id rather than an ability name (Locale independent)