@@ -11,9 +11,9 @@ Author = "ZorbaTHut / Ben Wilhelm / Trion Worlds"
 Website = "http://www.riftgame.com"
 Email = "bwilhelm@trionworlds.com"
 
-Version = "2.2"
+Version = "2.3"
 
-Environment = "1.5"
+Environment = "2.2"
 
 RunOnStartup = {
   "main.lua",
